Fix display on smaller screens

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -34,12 +34,13 @@ body {
   position: absolute;
   right: 0;
   left: 0;
+  top: -50px;
   margin: 0 auto;
 }
 
 .welcome-screen {
   position: absolute;
-  margin: 200px auto;
+  margin: 13% auto;
   left: 0;
   color: white;
   top: 0;
@@ -151,7 +152,7 @@ footer {
   justify-content: space-around;
   position: absolute;
   color: white;
-  bottom: 100px;
+  bottom: 5%;
   margin: auto;
   right: 0;
   left: 0;
